--- a/appsettings.json
+++ b/appsettings.json
@@ -13,5 +13,8 @@
     "ClientId": "3d01cf8c-2840-4fb9-97ea-3b150cc2a546",
     "CallbackPath": "/signin-oidc",
     "SignedOutCallbackPath": "/signout-callback-oidc"
+  },
+  "ConnectionStrings": {
+    "MongoDb": "mongodb+srv://nubulusws:oHDu7EwgRz8QnbGl@nubulusws.kvvgjkb.mongodb.net/?retryWrites=true&w=majority&appName=nubulusws"
   }
 }
