--- a/NUBULUS.AccountsAppsPortalBackEnd.csproj
+++ b/NUBULUS.AccountsAppsPortalBackEnd.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.20" />
     <PackageReference Include="Microsoft.Identity.Web" Version="3.14.1" />
+    <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
